[Clean-up] Fixed drag and drop && Restructured dialog code && Fixed alignment and overflow (#53)
* [CLEAN-UP-FIXES] Fixed drag and drop

* [CLEAN-UP-FIXES] Restructured dialog code and cleaned up naming

* [CLEAN-UP-FIXES] Fixed alignment and overflow on mobile download page

--- a/src/client/javascript/client/components/download-page.module.css
+++ b/src/client/javascript/client/components/download-page.module.css
@@ -1,6 +1,5 @@
 .downloadPanelWrapper {
     display: grid;
-    width: max-content;
     margin: 20px;
 }
 
@@ -16,20 +15,28 @@
 
 .filesList {
     height: 420px;
+    max-width: 100%;
+    overflow: hidden;
 }
 
 .fileDescriptionWrapper {
     display: flex;
+    max-width: 100%;
     flex-direction: row;
     margin-top: 20px;
     justify-content: center;
+    overflow: hidden;
 }
 
 .fileDescription {
     font-family: Roboto, Helvetica, sans-serif;
     font-size: 18px;
+    max-width: 100%;
     color: #4A4A4A;
     flex-grow: 0;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .fileDownloadProgress {
